--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.restdoc.blueprint</groupId>
 	<artifactId>blueprint-converter</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<name>RestDoc to Blueprint converter</name>
 	<properties>
 		<mainClass>org.restdoc.blueprint.converter.Starter</mainClass>
